feature/test3a コンフリクトテスト

--- a/index.html
+++ b/index.html
@@ -9,5 +9,6 @@
    <h2> 変更１</h2> 
    <h2> feature/test2 追加</h2>
    <h3>test2 コミット２</h3>
+   <h2>feature/test3a コンフリクトテスト あああ</h2>
 </body>
 </html>
